RESOLVED FIXED85663
DFG should not Flush GetLocal's
https://bugs.webkit.org/show_bug.cgi?id=85663
Summary DFG should not Flush GetLocal's
Filip Pizlo
Reported 2012-05-04 14:02:20 PDT
Not only is it wasteful but the virtual register allocator gets confused by it.
Attachments
the patch (4.37 KB, patch)
2012-05-04 14:04 PDT, Filip Pizlo
no flags
the patch (4.95 KB, patch)
2012-05-04 14:12 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2012-05-04 14:02:37 PDT
Filip Pizlo
Comment 2 2012-05-04 14:04:32 PDT
Created attachment 140317 [details] the patch
Filip Pizlo
Comment 3 2012-05-04 14:12:18 PDT
Created attachment 140320 [details] the patch And now, with an expected results file!
Filip Pizlo
Comment 4 2012-05-04 14:17:43 PDT
Note You need to log in before you can comment on or make changes to this bug.