DFG should not Flush GetLocal's https://bugs.webkit.org/show_bug.cgi?id=85663 <rdar://problem/11373600>

Reviewed by Oliver Hunt.

Source/JavaScriptCore:

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::flushArgument):
(JSC::DFG::ByteCodeParser::handleCall):

LayoutTests:

* fast/js/dfg-flush-get-local-expected.txt: Added.
* fast/js/dfg-flush-get-local.html: Added.
* fast/js/script-tests/dfg-flush-get-local.js: Added.
(foo):
(fuzz):
(bar):



Canonical link: https://commits.webkit.org/103236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116168 268f45cc-cd09-0410-ab3c-d52691b4dbfc